调整： -任务管理器添加暂停和继续的逻辑，支持一次停止所有任务，重构pressUse任务和Vault任务的代码
修复：
调用方法错误，导致无法获取Carpet-Org-Addition的fakePlayerSpawnMemoryLeakFix规则，导致该规则失效。